# leetcode

./: .gitignore  .gitmodules  leetcode.001-050.sln  leetcode.051-100.sln  leetcode.sln  leetcode.vcxproj  leetcode.vcxproj.filters
001.two-sum/: 001.two-sum.vcxproj
002.add-two-numbers/: 002.add-two-numbers.vcxproj
003.longest-substring-without-repeating-characters/: 003.longest-substring-without-repeating-characters.vcxproj
004.median-of-two-sorted-arrays/: 004.median-of-two-sorted-arrays.vcxproj
005.longest-palindromic-substring/: 005.longest-palindromic-substring.vcxproj
006.zigzag-conversion/: 006.zigzag-conversion.vcxproj
007.reverse-integer/: 007.reverse-integer.vcxproj
008.string-to-integer-atoi/: 008.string-to-integer-atoi.vcxproj  main.cpp
009.palindrome-number/: 009.palindrome-number.vcxproj
010.regular-expression-matching/: 010.regular-expression-matching.vcxproj
011.container-with-most-water/: 011.container-with-most-water.vcxproj
012.integer-to-roman/: 012.integer-to-roman.vcxproj
013.roman-to-integer/: 013.roman-to-integer.vcxproj
014.longest-common-prefix/: 014.longest-common-prefix.vcxproj
015.3sum/: 015.3sum.vcxproj
016.3sum-closest/: 016.3sum-closest.vcxproj
017.letter-combinations-of-a-phone-number/: 017.letter-combinations-of-a-phone-number.vcxproj
018.4sum/: 018.4sum.vcxproj
019.remove-nth-node-from-end-of-list/: 019.remove-nth-node-from-end-of-list.vcxproj
020.valid-parentheses/: 020.valid-parentheses.vcxproj
021.merge-two-sorted-lists/: 021.merge-two-sorted-lists.vcxproj
022.generate-parentheses/: 022.generate-parentheses.vcxproj  main.cpp
023.merge-k-sorted-lists/: 023.merge-k-sorted-lists.vcxproj
024.swap-nodes-in-pairs/: 024.swap-nodes-in-pairs.vcxproj  main.cpp
025.reverse-nodes-in-k-group/: 025.reverse-nodes-in-k-group.vcxproj  main.cpp
026.remove-duplicates-from-sorted-array/: 026.remove-duplicates-from-sorted-array.vcxproj  main.cpp
027.remove-element/: 027.remove-element.vcxproj
028.implement-strstr/: 028.implement-strstr.vcxproj
029.divide-two-integers/: 029.divide-two-integers.vcxproj
030.substring-with-concatenation-of-all-words/: 030.substring-with-concatenation-of-all-words.vcxproj
032.longest-valid-parentheses/: 032.longest-valid-parentheses.vcxproj
033.search-in-rotated-sorted-array/: 033.search-in-rotated-sorted-array.vcxproj
034.find-first-and-last-position-of-element-in-sorted-array/: 034.find-first-and-last-position-of-element-in-sorted-array.vcxproj
035.search-insert-position/: 035.search-insert-position.vcxproj
036.valid-sudoku/: 036.valid-sudoku.vcxproj
038.count-and-say/: 038.count-and-say.vcxproj
039.combination-sum/: 039.combination-sum.vcxproj
040.combination-sum-ii/: 040.combination-sum-ii.vcxproj
041.first-missing-positive/: 041.first-missing-positive.vcxproj
043.multiply-strings/: 043.multiply-strings.vcxproj
045.jump-game-ii/: 045.jump-game-ii.vcxproj
046.permutations/: 046.permutations.vcxproj
047.permutations-ii/: 047.permutations-ii.vcxproj
048.rotate-image/: 048.rotate-image.vcxproj
049.group-anagrams/: 049.group-anagrams.vcxproj
050.powx-n/: 050.powx-n.vcxproj  main.cpp
054.spiral-matrix/: 054.spiral-matrix.vcxproj
055.jump-game/: 055.jump-game.vcxproj  main.cpp
056.merge-intervals/: 056.merge-intervals.vcxproj  main.cpp
057.insert-interval/: 057.insert-interval.vcxproj  main.cpp
058.length-of-last-word/: 058.length-of-last-word.vcxproj
059.spiral-matrix-ii/: 059.spiral-matrix-ii.vcxproj
060.permutation-sequence/: 060.permutation-sequence.vcxproj  main.cpp
061.rotate-list/: 061.rotate-list.vcxproj  main.cpp
062.unique-paths/: 062.unique-paths.vcxproj
063.unique-paths-ii/: 063.unique-paths-ii.vcxproj
064.minimum-path-sum/: 064.minimum-path-sum.vcxproj
066.plus-one/: 066.plus-one.vcxproj  main.cpp
067.add-binary/: 067.add-binary.vcxproj
069.sqrtx/: 069.sqrtx.vcxproj  main.cpp
070.climbing-stairs/: 070.climbing-stairs.vcxproj
071.simplify-path/: 071.simplify-path.vcxproj
073.set-matrix-zeroes/: 073.set-matrix-zeroes.vcxproj
074.search-a-2d-matrix/: 074.search-a-2d-matrix.vcxproj
075.sort-colors/: 075.sort-colors.vcxproj  main.cpp
077.combinations/: 077.combinations.vcxproj
078.subsets/: 078.subsets.vcxproj
079.word-search/: 079.word-search.vcxproj
080.remove-duplicates-from-sorted-array-ii/: 080.remove-duplicates-from-sorted-array-ii.vcxproj
algorithm/: 001.two_sum.cpp  002.add_two_numbers.cpp  003.length_of_longest_substring.cpp  003.longest_substring_without_repeating_characters.cpp  004.find_median_sorted_arrays.cpp  004.median_of_two_sorted_arrays.cpp  005.longest_palindrome.cpp  005.longest_palindromic_substring.cpp  006.convert.cpp  006.zigzag_conversion.cpp  007.reverse.cpp  007.reverse_integer.cpp  008.my_atoi.cpp  008.string_to_integer_atoi.cpp  009.is_palindrome.cpp  009.palindrome_number.cpp  010.is_match.cpp  010.regular_expression_matching.cpp  011.container_with_most_water.cpp  012.integer_to_roman.cpp  013.roman_to_integer.cpp  014.longest_common_prefix.cpp  015.3sum.cpp  017.letter_combinations_of_a_phone_number.cpp  018.4sum.cpp  019.remove_nth_node_from_end_of_list.cpp  020.valid_parentheses.cpp  021.merge_two_sorted_lists.cpp  022.generate_parentheses.cpp  024.swap_nodes_in_pairs.cpp  027.remove_element.cpp  028.implement_strstr.cpp  029.divide_two_integers.cpp  030.substring_with_concatenation_of_all_words.cpp  033.search-in-rotated-sorted-array.cpp  034.find-first-and-last-position-of-element-in-sorted-array.cpp  035.search-insert-position.cpp  039.combination-sum.cpp  040.combination-sum-ii.cpp  041.first-missing-positive.cpp  (+25 more)
include/: common.h
leetcode.001-050/002.add-two-numbers/: 002.add-two-numbers.vcxproj
leetcode.001-050/003.longest-substring-without-repeating-characters/: main.cpp
leetcode.001-050/007.reverse-integer/: main.cpp
leetcode.001-050/011.container-with-most-water/: 011.container-with-most-water.vcxproj
leetcode.001-050/012.integer-to-roman/: 012.integer-to-roman.vcxproj
leetcode.001-050/013.roman-to-integer/: main.cpp
(+112 files in other folders)
